# cmake_demo

common/: CMakeLists.txt
common/math/: CMakeLists.txt  add.cpp  add.h
demo/: CMakeLists.txt
demo/src/: CMakeLists.txt  main.cpp
